# rs-io-text

./: .qubit-style-allowlist  Cargo.toml  README.md  README.zh_CN.md
doc/: user_guide.md  user_guide.zh_CN.md
src/: coding_error_policy.rs  lib.rs  line_ending.rs  prelude.rs
src/adapters/: charset_string_decoder.rs  charset_string_encoder.rs  charset_text_reader.rs  charset_text_writer.rs  encoded_text_reader.rs  encoded_text_writer.rs  input_text_reader.rs  mod.rs  output_text_writer.rs  str_char_input.rs  str_text_reader.rs  string_char_input.rs  string_char_output.rs  string_input.rs  string_output.rs  string_text_reader.rs  string_text_writer.rs  text_cursor.rs  utf8_text_reader.rs  utf8_text_writer.rs
src/ext/: charset_read_ext.rs  charset_write_ext.rs  mod.rs
src/stream/: buffered_reader.rs  buffered_writer.rs  mod.rs
src/traits/: mod.rs  text_line_read.rs  text_read.rs  text_write.rs
tests/: lib_tests.rs  prelude_tests.rs  traits_tests.rs
tests/adapters/: charset_string_decoder_tests.rs  charset_string_encoder_tests.rs  charset_text_reader_tests.rs  charset_text_writer_tests.rs  encoded_text_reader_tests.rs  encoded_text_writer_tests.rs  input_text_reader_tests.rs  mod.rs  output_text_writer_tests.rs  str_char_input_tests.rs  str_text_reader_tests.rs  string_char_input_tests.rs  string_char_output_tests.rs  string_input_tests.rs  string_output_tests.rs  string_text_reader_tests.rs  string_text_writer_tests.rs  utf8_text_reader_tests.rs  utf8_text_writer_tests.rs
tests/stream/: buffered_reader_tests.rs  buffered_writer_tests.rs  mod.rs
