[package]
name = "qubit-io-text"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-io-text"
description = "Text-oriented I/O traits and adapters for Rust"
homepage = "https://github.com/qubit-ltd/rs-io-text"
documentation = "https://docs.rs/qubit-io-text"
readme = "README.md"
keywords = ["text", "io", "unicode", "encoding", "qubit"]
categories = ["encoding", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_io_text"
doctest = true

[dependencies]
qubit-codec = { version = "0.7", path = "../rs-codec" }
qubit-codec-text = { version = "0.1", path = "../rs-codec-text" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
