[package]
name = "qubit-io-text"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-io-text"
description = "Text-oriented I/O traits and adapters for Rust"
homepage = "https://github.com/qubit-ltd/rs-io-text"
documentation = "https://docs.rs/qubit-io-text"
readme = "README.md"
keywords = ["text", "io", "unicode", "encoding", "qubit"]
categories = ["encoding", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_io_text"
doctest = true

[dependencies]
qubit-io = { path = "../rs-io", version = "0.10.1" }
qubit-codec = { path = "../rs-codec", version = "0.9.0" }
qubit-codec-text = { path = "../rs-codec-text", version = "0.2.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
